# swiftauth-fire

./: .gitignore  AGENT-doc.md  README.md  index.js  package.json
js/: AGENT-doc.md  README.md  package.json
js/scripts/: postinstall.js
js/src/: index.js  index.test.js  react.js  react.test.js
python/: AGENT-doc.md  README.md  pyproject.toml
python/swifttauth_fire/: AGENT-doc.md  __init__.py  cli.py  core.py  django.py  fastapi.py
python/tests/: test_core.py  test_django.py  test_fastapi.py
