[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swifttauth-fire"
version = "1.1.0"
authors = [
  { name="TADSTech" },
]
description = "Exclusive sign in with google for simple authentication scaffolding across frameworks."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "firebase-admin>=6.0.0"
]

[project.optional-dependencies]
django = ["django>=3.2"]
fastapi = ["fastapi>=0.68.0"]

[project.scripts]
swifttauth-init = "swifttauth_fire.cli:main"

[tool.setuptools.packages.find]
include = ["swifttauth_fire"]

[tool.setuptools.package-data]
swifttauth_fire = ["*.md"]
